--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,35 +1,13 @@
 
 @article{lancaster_analyzing_2025,
-	title = {Analyzing the {Impact} of {Four} {Cognitive} {Constructs} on {Nonverbal} {Intelligence} {Test} {Performance}: {Implications} for {Children} {With} {Neurodevelopmental} {Disorders}},
-	volume = {56},
+	abbr={LSHSS}
+	title = {Analyzing the Impact of Four Cognitive Constructs on Nonverbal Intelligence Test Performance: Implications for Children With Neurodevelopmental Disorders},
+	author = {Lancaster, Hope Sparks and Smolak, Erin and Milne, Alice and Gordon, Katherine R. and Emerson, Samantha N. and Selin, Claire},	
+volume = {56},
 	issn = {0161-1461, 1558-9129},
-	shorttitle = {Analyzing the {Impact} of {Four} {Cognitive} {Constructs} on {Nonverbal} {Intelligence} {Test} {Performance}},
 	url = {https://pubs.asha.org/doi/10.1044/2025_LSHSS-24-00056},
 	doi = {10.1044/2025_LSHSS-24-00056},
-	abstract = {Purpose:
-              Children with neurodevelopmental disorders historically exhibit lower and more variable nonverbal intelligence (NVIQ) scores compared to their typically developing peers. We hypothesize that the intrinsic characteristics of the tests themselves, particularly the cognitive constructs they assess, may account for both the lower scores and variability across tests and over time. Using a qualitative content analysis approach, we examined the extent to which key cognitive constructs are engaged in NVIQ tests and how these constructs compare across different tests.
-            
-            
-              Method:
-              Current editions of seven NVIQ tests were selected based on their relevance in clinical and research settings. Qualitative coding of constructs was developed iteratively by speech-language pathologists and researchers. The codes focused on cognitive domains most affected in highly prevalent neurodevelopmental conditions, including attention, receptive language, statistical learning, and working memory.
-            
-            
-              Results:
-              We identified multiple subfeatures for our constructs of interest. Using this coding framework, we found that NVIQ tests qualitatively differ in the extent to which these four constructs influence test performance.
-            
-            
-              Conclusions:
-              Our findings suggest that understanding the impact of cognitive constructs on NVIQ tests can help explain why children with neurodevelopmental disorders exhibit lower and more unstable NVIQ scores compared to their peers. We provide recommendations for the use of NVIQ tests with neurodevelopmental disorder populations and encourage researchers and clinicians in speech and hearing sciences and psychology to use our results to inform test interpretation and selection.
-            
-            
-              Supplemental Material:
-              
-                https://doi.org/10.23641/asha.28886957},
-	language = {en},
-	number = {3},
-	urldate = {2025-09-18},
 	journal = {Language, Speech, and Hearing Services in Schools},
-	author = {Lancaster, Hope Sparks and Smolak, Erin and Milne, Alice and Gordon, Katherine R. and Emerson, Samantha N. and Selin, Claire},
 	month = jul,
 	year = {2025},
 	pages = {834--846},
@@ -50,7 +28,7 @@
 }
 
 @article{wombacher_impact_2025,
-	title = {The impact of enhanced {Milieu} teaching with phonological emphasis ({EMT} + {PE}) on the speech and language outcomes for toddlers with cleft palate in {Brazil} and the {United} {States} of {America}},
+	title = {The impact of enhanced Milieu teaching with phonological emphasis (EMT + PE) on the speech and language outcomes for toddlers with cleft palate in Brazil and the United States of America},
 	volume = {27},
 	issn = {1754-9507, 1754-9515},
 	url = {https://www.tandfonline.com/doi/full/10.1080/17549507.2024.2342783},
@@ -66,24 +44,11 @@
 }
 
 @article{woods_go_2024,
-	title = {Go {Beyond} {Compliance}: {Use} {Individualized} {Education} {Programs} to {Answer} {Strategic} {Questions} and {Improve} {Programs}},
+	title = {Go Beyond Compliance: Use Individualized Education Programs to Answer Strategic Questions and Improve Programs},
 	volume = {55},
 	issn = {0161-1461, 1558-9129},
-	shorttitle = {Go {Beyond} {Compliance}},
 	url = {https://pubs.asha.org/doi/10.1044/2023_LSHSS-23-00084},
 	doi = {10.1044/2023_LSHSS-23-00084},
-	abstract = {Abstract
-            
-              Purpose:
-              The most significant document to ensure effective and compliant design, implementation, monitoring, and enforcement of a program of special education services in the United States is the Individualized Education Program (IEP). Although IEPs have been used to document procedural compliance with the Individuals with Disabilities Education Act (IDEA) for individual students, IEPs also provide extensive data that can and should be used by a variety of stakeholders including speech-language pathologists (SLPs), school administrators, and state education agencies to design targeted professional development and collectively improve programs, processes, and outcomes in special education.
-            
-            
-              Method:
-              We summarize existing literature on the use of IEP data and describe opportunities to use IEP data to analyze individual student service patterns and SLP practice patterns. Aggregated IEP data also provide a robust view of district-wide and state trends in eligibility rates and least restrictive environment settings. Information on current and potential IEP data uses, reflection questions for substantive compliance, and lessons learned from a large-scale analysis of IEP data are provided. These lessons include potential software adjustments to enhance usability as a data source for substantive compliance; program improvement; and monitoring individual, school-wide, and district-wide outcomes.
-            
-            
-              Conclusions:
-              IEP data are a rich data source of information that may be used to (a) identify trends; (b) assist schools, districts, and states with ensuring substantive compliance with IDEA; (c) examine service equity and efficacy; (d) identify professional development needs; and (e) identify promising practices and provide opportunities to use real-time data to improve models and address public policy.},
 	language = {en},
 	number = {2},
 	urldate = {2025-09-18},
@@ -95,30 +60,11 @@
 }
 
 @article{tibbits_effect_2023,
-	title = {The {Effect} of {Phonological} {Overlap} on {English} and {Spanish} {Expressive} {Vocabulary}},
+	title = {The Effect of Phonological Overlap on English and Spanish Expressive Vocabulary},
 	volume = {54},
 	issn = {0161-1461, 1558-9129},
 	url = {https://pubs.asha.org/doi/10.1044/2022_LSHSS-22-00021},
 	doi = {10.1044/2022_LSHSS-22-00021},
-	abstract = {Purpose:
-              This study examined the effect of phonological overlap on English and Spanish expressive vocabulary accuracy as measured by the bilingual Expressive One-Word Picture Vocabulary Test–Fourth Edition (EOWPVT-IV). We hypothesized that if languages interact during an expressive vocabulary task, then higher phonological overlap will predict higher expressive vocabulary accuracy, especially in the nondominant language.
-            
-            
-              Method:
-              Twenty English-dominant bilingual children (English–Spanish) completed the bilingual EOWPVT-IV. We calculated phonological overlap between 117 English and Spanish words included in the bilingual EOWPVT using the Crosslinguistic Overlap Scale for Phonology.
-            
-            
-              Results:
-              Generalized logistic mixed-effect models revealed that phonological overlap and word frequency predicted vocabulary accuracy in Spanish, in addition to item difficulty. Age and item difficulty were the only predictors of English accuracy.
-            
-            
-              Conclusions:
-              Phonological overlap was a significant predictor of Spanish vocabulary accuracy (the least dominant language of the children in our sample), suggesting a transfer between vocabulary in the dominant language into vocabulary in the least dominant language. Future studies should investigate how languages interact in bilingual children to provide us with information about how to create and administer vocabulary tests that represent vocabulary in each language and use vocabulary teaching strategies that promote dual language development.
-            
-            
-              Supplemental Material:
-              
-                https://doi.org/10.23641/asha.21554838},
 	language = {en},
 	number = {1},
 	urldate = {2025-09-18},
@@ -130,40 +76,11 @@
 }
 
 @article{lancaster_reading_2022,
-	title = {Reading {Development} in {Children} {With} {Nonsyndromic} {Cleft} {Palate} {With} or {Without} {Cleft} {Lip}: {Meta}-analysis and {Systematic} {Review}},
+	title = {Reading Development in Children With Nonsyndromic Cleft Palate With or Without Cleft Lip: Meta-analysis and Systematic Review},
 	volume = {59},
 	issn = {1055-6656, 1545-1569},
-	shorttitle = {Reading {Development} in {Children} {With} {Nonsyndromic} {Cleft} {Palate} {With} or {Without} {Cleft} {Lip}},
 	url = {https://journals.sagepub.com/doi/10.1177/10556656211039871},
 	doi = {10.1177/10556656211039871},
-	abstract = {Objective
-              We conducted a meta-analysis and systematic review of literature comparing pre-reading and general reading in school-age children with nonsyndromic cleft palate with or without cleft lip (NSCP/L) to their peers without NSCP/L.
-            
-            
-              Methods
-              
-                Our literature search identified 1238 possible records. After screening we identified 11 samples for inclusion for systematic review and eight for meta-analysis. We compared 292 children with NSCP/L to 311 peers for 23 pre-reading effect sizes and 17 general reading effect sizes (EF
-                g
-                ). We conducted a random-effects metaregression using robust variance estimation.
-              
-            
-            
-              Results
-              
-                On average school-age children with NSCP/L scored lower on pre-reading (EF
-                g
-                 = −0.36) and general reading measures (EF
-                g
-                 = −0.38) compared to their peers. We conducted post-hoc analyses on phonological awareness and word decoding effect sizes; children with NSCP/L performed lower on phonological awareness (EF
-                g
-                 = −0.22) and word decoding (EF
-                g
-                 = −0.39) compared to their peers. There was weak evidence that hearing status and/or speech-language functioning might moderate reading development. There was limited evidence that age or socioeconomic status moderated reading development. However, samples did not consistently report several characteristics that were coded for this project.
-              
-            
-            
-              Conclusions
-              Our findings suggest that school-age children with NSCP/L have persistent reading problems. Further research is needed to explore reading development in children with NSCP/L, as well as the relationships among hearing, speech, language, and reading development.},
 	language = {en},
 	number = {9},
 	urldate = {2025-09-18},
@@ -179,7 +96,6 @@
 	volume = {62},
 	issn = {20473877},
 	doi = {10.1179/2047387715Y.0000000010},
-	abstract = {A combined storybook and play vocabulary intervention was implemented as a single-subject study of 23 children of diverse typologies, including 10 with autism spectrum disorder (ASD), three with developmental disability (DD), five with Down Syndrome, and five with specific language impairment (SLI), who were currently receiving speech-language services and had an individual education plan (IEP) goal targeting language. Participants' ages ranged from 3 years-1 month to 7 years-4 months. A parallel treatment design was used to identify changes at (a) word level, (b) child level, and (c) in children of similar typological and developmental profiles. All children learned vocabulary words to criterion in both expressive and receptive modalities. Children of different etiological origin did not vary in the trajectory of their receptive or expressive word learning. These results suggest that the trajectory of word learning may be remarkably consistent across disability typologies. The theoretical and clinical ramifications of these findings are discussed.},
 	number = {2},
 	journal = {International Journal of Developmental Disabilities},
 	author = {Davis, Tonia N. and Lancaster, Hope S. and Camarata, Stephen},
@@ -202,17 +118,8 @@
 	pages = {1--31},
 }
 
-@inproceedings{lancaster_relationship_2013,
-	address = {Nashville, TN},
-	title = {The relationship between pre-literacy skills and fluid reasoning in kindergarteners with and without language impairment},
-	booktitle = {American {Speech}-{Language}-{Hearing} {Association} {Conference}},
-	publisher = {Vanderbilt University},
-	author = {Lancaster, Hope Sparks and Camarata, Stephen},
-	year = {2013},
-}
-
 @article{lancaster_using_2016,
-	title = {Using local norms when identifying {PLD}: {Utility} of sample specific parameters},
+	title = {Using local norms when identifying PLD: Utility of sample specific parameters},
 	volume = {4},
 	issn = {2332-3000},
 	journal = {International Journal of Behavioral Research \& Psychology},
@@ -227,7 +134,6 @@
 	volume = {173},
 	issn = {15524833},
 	doi = {10.1002/ajmg.a.38385},
-	abstract = {© 2017 Wiley Periodicals, Inc. Interstitial and terminal 6q25 deletions are associated with developmental delays, hypotonia, eye pathologies, craniofacial dysmorphologies, and structural brain anomalies. In most cases, speech and language deficits are not described in detail. We report on a case (Patient 1, age 7 years) with a de novo 6q25.3-qter deletion, 11.1Mb long and encompassing 108 genes, and a case (Patient 2, age 5 years) with an inherited interstitial 6q25.3 deletion, located within Patient 1's deletion region and 403kb long, the smallest 6q25 deletion reported to date. Both children have hypotonia, motor speech disorders, and expressive language delays. Patient 1's speech was characterized by childhood apraxia of speech (CAS) and dysarthria. Other findings include developmental delay, ataxic cerebral palsy, optic nerve dysplagia, and atypical brain morphologies regarding the corpus callosum and gyration patterns, a clinical profile that closely matches a previously reported case with a nearly identical deletion. Patient 2 had speech characterized by CAS and typical nonverbal processing abilities. His father, a carrier, had typical speech and language but showed difficulties with complex motor speech and hand motor tasks, similar to other adults with residual signs of CAS. The small deletion in this family contains the IGF2R-AIRN-SLC22A2-SLC22A3 gene cluster, which is associated with imprinting and maternal-specific expression of Igf2R, Slc22a2, and Slc22a3 in mice, whereas imprinting in humans is a polymorphic trait. The shared phenotypes in the two patients might be associated with the deletion of the gene cluster.},
 	number = {10},
 	journal = {American Journal of Medical Genetics, Part A},
 	author = {Peter, Beate and Lancaster, Hope Sparks and Vose, Caitlin and Fares, Amna and Schrauwen, Isabelle and Huentelman, Matthew},
@@ -237,7 +143,7 @@
 }
 
 @article{hornsby_subjective_2017,
-	title = {Subjective {Fatigue} in {Children} {With} {Hearing} {Loss} {Assessed} {Using} {Self}- and {Parent}-{Proxy} {Report}},
+	title = {Subjective Fatigue in Children With Hearing Loss Assessed Using Self- and Parent-Proxy Report},
 	volume = {26},
 	journal = {American Journal of Audiology},
 	author = {Hornsby, Benjamin W. Y. and Gustafson, Samantha J. and Lancaster, Hope Sparks and Cho, Sun-joo and Camarata, Stephen and Bess, Fred H.},
@@ -246,11 +152,10 @@
 }
 
 @article{philp_changes_2018,
-	title = {Changes in {Articulation} and {Phonological} {Patterns} {During} {Early} {Intervention} in {Children} with {Cleft} {Palate} {With} or {Without} {Cleft} {Lip}},
+	title = {Changes in Articulation and Phonological Patterns During Early Intervention in Children with Cleft Palate With or Without Cleft Lip},
 	volume = {35},
 	url = {https://jyi.org/2018-july/2018/7/1/changes-in-articulation-and-phonological-patterns-during-early-intervention-in-children-with-cleft-palate-with-or-without-cleft-lip},
 	doi = {10.22186/jyi.35.1.20-28},
-	abstract = {Early intervention is often recommended for children with cleft palate, although speech outcomes over the course of intervention have not been extensively documented. The primary objective of this study was to describe the change in use of deletions and sub- stitutions in speech over the course of early intervention for children with cleft palate, with or without cleft lip (CP +/- L). Data from 25 participants were included in this analysis. The participants were part of a randomized control trial comparing Enhanced Milieu Teaching with Phonological Emphasis (EMT+PE) to a business-as-usual (BAU) group. Participants' speech errors were evaluated at four time points using the Profiles of Early Expressive Phonological Skills. The number of deletions and substitutions was as- sessed at each time point. Further investigation of substitutions was accomplished by comparing cleft-related speech substitutions to developmentally appropriate substitutions. Deletions increased from pre-intervention to mid-point then decreased through the three-month follow-up in both groups. Substitutions increased, decreased, and finally increased again from pre-intervention to the three-month follow-up. Cleft-related substitutions and developmental substitutions did not have the same growth pattern. These re- sults suggest that evaluation of intervention effects must focus on changes in a child's sound system beyond speech accuracy and note changes that mark speech sound progress toward adult-like productions. Additionally, moderate increases in speech errors at the three-month follow-up in the EMT+PE group indicate the need for continued support following the course of intervention},
 	number = {1},
 	journal = {Journal of Young Investigators},
 	author = {Philp, Jennifer and Vovakes, Ariel and Lancaster, Hope Sparks and Frey, Jennifer and Scherer, Nancy},
@@ -264,7 +169,6 @@
 	issn = {17549507},
 	url = {https://doi.org/10.1080/17549507.2019.1702719},
 	doi = {10.1080/17549507.2019.1702719},
-	abstract = {Purpose: The purpose of this study was to investigate the extent to which a naturalistic communication intervention, Enhanced Milieu Teaching with Phonological Emphasis (EMT + PE) improved the speech outcomes of toddlers with cleft palate with or without cleft lip (CP ± L) Method: This study was a stratified randomised controlled trial. Setting: Treatment was delivered in a university clinic by a trained speech-language pathologist. Participants: Thirty children aged between 15 and 36 months (M = 25) with nonsyndromic CP ± CL and typical cognitive development were randomly assigned to a treatment (EMT + PE) or business as usual comparison condition. Interventions: Participants in the EMT + PE treatment group received 48, 30-min sessions, over a 6-month period. Fidelity of treatment was high across participants. Main outcome measures: The primary outcome measures were percent consonants correct (PCC), consonant inventory, compensatory articulation errors, and nasal emission. Results: Regression analyses controlling for pre-intervention child characteristics were conducted for PCC and consonant inventory. Intervention was not a significant predictor of post-intervention outcome. Words per minute differentiated the children who benefitted from the intervention from those who did not. Reduction in compensatory errors and nasal emission occurred in both groups but to a greater degree in the EMT + PE group. Conclusion: EMT + PE is a promising early speech intervention for young children with CP ± L, especially for children with higher rates of word use.},
 	number = {0},
 	journal = {International Journal of Speech-Language Pathology},
 	author = {Scherer, Nancy J. and Kaiser, Ann P. and Frey, Jennifer R. and Lancaster, Hope Sparks and Lien, Kari and Roberts, Megan Y.},
@@ -279,7 +183,6 @@
 	volume = {63},
 	issn = {10924388},
 	doi = {10.1044/2020_JSLHR-19-00186},
-	abstract = {Purpose: We investigated four theoretically based latent variable models of word learning in young school-age children. Method: One hundred sixty-seven English-speaking second graders with typical development from three U.S. states participated. They completed five different tasks designed to assess children's creation, storage, retrieval, and production of the phonological and semantic representations of novel words and their ability to link those representations. The tasks encompassed the triggering and configuration stages of word learning. Results: Results showed that a latent variable model with separate phonological and semantic factors and linking indicators constrained to load on the phonological factor best fit the data. Discussion: The structure of word learning during triggering and configuration reflects separate but related phonological and semantic factors. We did not find evidence for a unidimensional latent variable model of word learning or for separate receptive and expressive word learning factors. In future studies, it will be interesting to determine whether the structure of word learning differs during the engagement stage of word learning when phonological and semantic representations, as well as the links between them, are sufficiently strong to affect other words in the lexicon.},
 	number = {5},
 	journal = {Journal of Speech, Language, and Hearing Research},
 	author = {Gray, Shelley and Lancaster, Hope and Alt, Mary and Hogan, Tiffany P. and Green, Samuel and Levy, Roy and Cowan, Nelson},
@@ -296,11 +199,10 @@
 }
 
 @article{lancaster_early_2020,
-	title = {Early speech and language development in children with nonsyndromic cleft lip and/or palate: {A} meta-analysis},
+	title = {Early speech and language development in children with nonsyndromic cleft lip and/or palate: A meta-analysis},
 	volume = {63},
 	issn = {10924388},
 	doi = {10.1044/2019_JSLHR-19-00162},
-	abstract = {Objective: The aim of the study was to conduct a meta-analysis of research examining the early speech and language functioning of young children, birth to age 8;11 (years; months), with nonsyndromic cleft lip and/or palate (NSCL/P) compared to their peers without NSCL/P. Method: We conducted a random-effects metaregression using 241 effect sizes from 31 studies comparing 955 young children with NSCL/P to 938 typically developing peers on measures of speech and language functioning. Moderators were sample characteristics (i.e., age, cleft type, publication year, and study location) and measurement characteristics (i.e., speech sample material, language modality and domain, and assessment type). Results: Young children with NSCL/P scored significantly lower on measures of speech and language compared to children without NSCL/P. Children with NSCL/P had smaller consonant inventories (standardized mean difference effect size [ESg]=−1.24), less accurate articulation (ESg = −1.13), and more speech errors (ESg = 0.93) than their peers. Additionally, children with NSCL/P had poorer expressive (ESg = −0.57) and receptive (ESg = −0.59) language skills than their peers. Age and assessment type moderated effect sizes for expressive language. As children with NSCL/P aged, their expressive language performance became more similar to their peers. Expressive language effect sizes from parent reports and observational language measures (estimated effect size = −0.74) were significantly lower than those from standardized norm-referenced tests (estimated effect size = −0.45). Conclusions: These findings suggest that young children with NSCL/P experience delays relative to their peers across multiple speech and language constructs. Differences between children with NSCL/P and their typically developing peers appear to decrease with age.},
 	number = {1},
 	journal = {Journal of Speech, Language, and Hearing Research},
 	author = {Lancaster, Hope Sparks and Lien, Kari M. and Chow, Jason C. and Frey, Jennifer R. and Scherer, Nancy J. and Kaiser, Ann P.},
@@ -313,7 +215,6 @@
 	volume = {00},
 	issn = {14679817},
 	doi = {10.1111/1467-9817.12368},
-	abstract = {Background: The purpose of this study was to examine the relationship between selective visual attention (SVA), reading decoding, listening comprehension and reading comprehension in children with and without a reading disorder. Methods: We used longitudinal data from the Avon Longitudinal Study of Parents and Children. We split children into four groups: Typical Readers, Dyslexics, Poor Comprehenders and Comorbid Reading Disorder. We included measures of single word reading, nonword reading, spelling, phonological processing, vocabulary, receptive language, nonverbal intelligence, selective attention and reading comprehension. We used analysis of variance, correlations and structural equation modelling to examine the relationship between SVA and reading. We fit two possible models: SVA Indirect and SVA Direct. The difference between these models was the inclusion of a direct path from SVA to reading comprehension. Results: We examined an indirect model, where SVA predicted reading comprehension through word decoding and listening comprehension, and a direct model, which included a pathway from SVA to reading comprehension. Based on our analysis of variance and correlation results, we collapsed the Dyslexic, Poor Comprehenders and Comorbid Reading Disorder groups for the structural equation modelling. We found evidence that for Typical Readers, an indirect model was the best fit, whereas the direct model was the best model for children with a reading disorder. Conclusions: Selective visual attention is related to reading comprehension. This relationship differs for children with and without a reading disorder.},
 	number = {00},
 	journal = {Journal of Research in Reading},
 	author = {Lancaster, Hope Sparks and Li, Jing and Gray, Shelley},
@@ -323,12 +224,11 @@
 }
 
 @article{peter_exome_2019,
-	title = {Exome {Sequencing} of {Two} {Siblings} with {Sporadic} {Autism} {Spectrum} {Disorder} and {Severe} {Speech} {Sound} {Disorder} {Suggests} {Pleiotropic} and {Complex} {Effects}.},
+	title = {Exome Sequencing of Two Siblings with Sporadic Autism Spectrum Disorder and Severe Speech Sound Disorder Suggests Pleiotropic and Complex Effects.},
 	volume = {49},
 	issn = {1573-3297},
 	url = {http://www.ncbi.nlm.nih.gov/pubmed/3094992 http://www.ncbi.nlm.nih.gov/pubmed/30949922},
 	doi = {10.1007/s10519-019-09957-8},
-	abstract = {Recent studies of autism spectrum disorder (ASD) and childhood apraxia of speech (CAS) have resulted in conflicting conclusions regarding the comorbidity of these disorders on phenotypic grounds. In a nuclear family with two dually affected and one unaffected offspring, whole-exome sequences were evaluated for single nucleotide and indel variants and CNVs. The affected siblings but not the unaffected sibling share a rare deleterious compound heterozygous mutation in WWOX, implicated both in ASD and motor control. In addition, one of the affected children carries a rare deleterious de novo mutation in the ASD candidate gene RIMS1. The two affected children but not their unaffected sibling inherited deleterious variants with relevance for ASD and/or CAS. WWOX, RIMS1, and several of the genes harboring the inherited variants are expressed in the brain during prenatal and early postnatal development. Results suggest compound heterozygosity as a cause of ASD and CAS, pleiotropic gene effects, and potentially additional, complex genetic effects.},
 	number = {4},
 	journal = {Behavior genetics},
 	author = {Peter, Beate and Dinu, Valentin and Liu, Li and Huentelman, Matthew and Naymik, Marcus and Lancaster, Hope and Vose, Caitlin and Schrauwen, Isabelle},
@@ -339,29 +239,15 @@
 }
 
 @article{lancaster_reading_2021,
-	title = {Reading {Development} in {Children} {With} {Nonsyndromic} {Cleft} {Palate} {With} or {Without} {Cleft} {Lip}: {Meta}-analysis and {Systematic} {Review}},
+	title = {Reading Development in Children With Nonsyndromic Cleft Palate With or Without Cleft Lip: Meta-analysis and Systematic Review},
 	issn = {15451569},
 	doi = {10.1177/10556656211039871},
-	abstract = {Objective: We conducted a meta-analysis and systematic review of literature comparing pre-reading and general reading in school-age children with nonsyndromic cleft palate with or without cleft lip (NSCP/L) to their peers without NSCP/L. Methods: Our literature search identified 1238 possible records. After screening we identified 11 samples for inclusion for systematic review and eight for meta-analysis. We compared 292 children with NSCP/L to 311 peers for 23 pre-reading effect sizes and 17 general reading effect sizes (EFg). We conducted a random-effects metaregression using robust variance estimation. Results: On average school-age children with NSCP/L scored lower on pre-reading (EFg = −0.36) and general reading measures (EFg = −0.38) compared to their peers. We conducted post-hoc analyses on phonological awareness and word decoding effect sizes; children with NSCP/L performed lower on phonological awareness (EFg = −0.22) and word decoding (EFg = −0.39) compared to their peers. There was weak evidence that hearing status and/or speech-language functioning might moderate reading development. There was limited evidence that age or socioeconomic status moderated reading development. However, samples did not consistently report several characteristics that were coded for this project. Conclusions: Our findings suggest that school-age children with NSCP/L have persistent reading problems. Further research is needed to explore reading development in children with NSCP/L, as well as the relationships among hearing, speech, language, and reading development.},
 	journal = {Cleft Palate-Craniofacial Journal},
 	author = {Lancaster, Hope Sparks and Lien, Kari M. and Haas, Jordan and Ellis, Paige and Scherer, Nancy J.},
 	year = {2021},
 	keywords = {meta-analysis, reading, systematic review},
 }
 
-@article{lancaster_genetic_2021,
-	title = {Genetic and {Demographic} {Predictors} of {Latent} {Reading} {Ability} in {Two} {Cohorts}},
-	url = {https://www.medrxiv.org/content/10.1101/2021.08.24.21262573v2 https://www.medrxiv.org/content/10.1101/2021.08.24.21262573v2.abstract},
-	doi = {10.1101/2021.08.24.21262573},
-	abstract = {Reading ability is a complex skill requiring multiple proficiencies (e.g., phonological awareness, decoding, and comprehension). Reading ability has genetic and environmental components that create the potential for significant gene-gene and gene-environment interactions, but the evidence for these interactions is limited. We used data from the Avon Longitudinal Study of Parents and Children and the Genes, Reading and Dyslexia Study to assess the contributions of genetic and demographic features to a continuous latent reading ability score. We then used this score as the phenotype on which to predicate genome-wide single nucleotide polymorph screening, followed by feature selection using an elastic net analysis. Results from the elastic net models showed that genetic and demographic features predicted reading ability for both cohorts. Five single nucleotide polymorphisms were associated with latent reading in the Avon Longitudinal Study of Parents and Children, as well as in the Genes, Reading and Dyslexia cohorts. For both cohorts, larger vocabularies were positively associated with latent reading ability. Genes within the neuron migration pathway were overrepresented in the Avon Longitudinal Study of Parents and Children cohort. We provide support that genes involved in early brain development have an impact on latent reading ability performance. Our findings also indicate high generalizability of genetic findings between cohorts, using our approach. \#\#\# Competing Interest Statement The authors have declared no competing interest. \#\#\# Funding Statement The UK Medical Research Council Wellcome Trust Grant (ref: 217065/Z/19/Z) and the University of Bristol provide core support for ALSPAC. This publication is the work of the authors and they will serve as guarantors for the contents of this paper. A comprehensive list of grants funding (PDF, 459KB, http://www.bristol.ac.uk/alspac/external/documents/grant-acknowledgements.pdf) is available on the ALSPAC website. GWAS data was generated by Sample Logistics and Genotyping Facilities at Wellcome Sanger Institute and LabCorp (Laboratory Corporation of America) using support from 23andMe. We acknowledge funding from the National Institutes of Health (Grant ref: R01 NS043530 awarded to JRG; P50 HD027802 awarded to JRG), and the Manton Foundation for support of the GRaD Study. The first author was supported by a National Institutes of Health F32 postdoctoral training grant (1F32HD089674-01A1; PI: HSL). \#\#\# Author Declarations I confirm all relevant ethical guidelines have been followed, and any necessary IRB and/or ethics committee approvals have been obtained. Yes The details of the IRB/oversight body that provided approval or exemption for the research described are given below: We obtained ethical approval for this study from the ALSPAC Ethics and Law Committee and the Local Research Ethics Committee(s) (Arizona State University Institutional Review Board). Informed consent and assent were obtained by research staff for each dataset. The GRaD dataset also had ethical approval from all recruitment sites (University of Colorado-Boulder, University of Denver, Tufts University, University of New Mexico, Kennedy Krieger Institute/John Hopkins University, Hospital for Sick Children-Toronto, and Yale University). All necessary patient/participant consent has been obtained and the appropriate institutional forms have been archived. Yes I understand that all clinical trials and any other prospective interventional studies must be registered with an ICMJE-approved registry, such as ClinicalTrials.gov. I confirm that any such study reported in the manuscript has been registered and the trial registration ID is provided (note: if posting a prospective study registered retrospectively, please provide a statement in the trial ID field explaining why the study was not registered in advance). Yes I have followed all appropriate research reporting guidelines and uploaded the relevant EQUATOR Network research reporting checklist(s) and other pertinent material as supplementary files, if applicable. Yes Please note that the study website contains details of all the data that are available through a fully searchable data dictionary (http://www.bristol.ac.uk/alspac/researchers/our-data/). Data from this study are available through ALSPAC upon approval by the executive board. Summary level data for the GRaD Study will be made available upon request.},
-	journal = {medRxiv},
-	author = {Lancaster, Hope Sparks and Dinu, Valentin and Li, Jing and Gruen, Jeffrey R and Consortium, The GRaD},
-	month = aug,
-	year = {2021},
-	note = {Publisher: Cold Spring Harbor Laboratory Press},
-	keywords = {ALSPAC, GRaD Introduction words: 1207, GWAS, machine learning, reading},
-	pages = {2021.08.24.21262573},
-}
 
 @article{lancaster_reconceptualizing_2019,
 	title = {Reconceptualizing developmental language disorder as a spectrum disorder: issues and evidence},
